added collision density per zip code

--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,7 @@
     "    SimpleLineSymbolEsriSLS,\n",
     "    SimpleMarkerSymbolEsriSMS,\n",
     ")\n",
+    "from arcgis.map import renderers\n",
     "from shapely.geometry import (\n",
     "    Point,\n",
     "    MultiPoint,\n",
@@ -87,7 +88,7 @@
     "\n",
     "* GIS has been extensively used to study the spatial distribution of traffic accidents, identifying hotspots and danger points in road traffic. For instance, the [FeGIS](https://bmdv.bund.de/SharedDocs/DE/Artikel/DG/mfund-projekte/frueherkennung-von-gefahrenstellen-im-strassenverkehr-fegis.html) (Early Detection of Dangerous Areas in road traffic) project in Germany helped identify these \"danger points\", preventing accidents through timely warnings of danger zones for pedestrians and road users. It offered an outline for proactive identification of danger for EU Road Safety Policy\n",
     "\n",
-    "Statistical Methosd in Traffic Safety Research \n",
+    "Statistical Methods in Traffic Safety Research \n",
     "\n",
     "* Statistical and econometrical methods for analyzing crash data and understanding the factors that influence accident occurrences and severities are essential to our project. Researchers like [Fred Mannering](https://en.wikipedia.org/wiki/Fred_Mannering) have contributed significantly to this field, developing models that account for accident frequency and severity based on road conditions, type, and more. \n",
     "\n",
@@ -155,17 +156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
-    "collision_layer = gis.content.search(query = \"owner:dsc170wi25_31\", item_type = \"Feature Layer\")[2]\n",
-    "collision_fl = gis.content.get(collision_layer.id).layers[0]"
+    "collision_layer = gis.content.search(query = \"owner:dsc170wi25_31\", item_type = \"Feature Layer\")[3]\n",
+    "collision_fl = gis.content.get(collision_layer.id).layers[0]\n",
+    "collision_sdf = collision_fl.query().sdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +186,7 @@
     "ca_zip_codes_gdf = gpd.GeoDataFrame(california_zip_codes_sdf).set_geometry(\"SHAPE\")\n",
     "ca_zip_codes_gdf = ca_zip_codes_gdf.set_crs(\"3857\")\n",
     "\n",
-    "# spatial join these two to find zip codes that lie within San Diego County\n",
+    "# spatial join these two to find zip codes that lie within San Diego County (add buffer to get rid of inconsistencies)\n",
     "sd_county_gdf['SHAPE'] = sd_county_gdf['SHAPE'].buffer(5000)\n",
     "sd_zip_codes = ca_zip_codes_gdf.sjoin(sd_county_gdf, predicate = 'within')\n",
     "\n",
@@ -197,35 +199,34 @@
     "    else:\n",
     "        return \"Rural\"\n",
     "\n",
-    "sd_zip_codes['POP_SQMI_left'] = sd_zip_codes['POP_SQMI_left'].fillna(3860)\n",
-    "sd_zip_codes[\"density_class\"] = sd_zip_codes[\"POP_SQMI_left\"].apply(\n",
-    "    classify_density\n",
-    ")"
+    "# fill the missing value with data from 2023\n",
+    "sd_zip_codes[\"POP_SQMI_left\"] = sd_zip_codes[\"POP_SQMI_left\"].fillna(3860)\n",
+    "sd_zip_codes[\"density_class\"] = sd_zip_codes[\"POP_SQMI_left\"].apply(classify_density)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# convert into feature layer -> don't run again, already created\n",
-    "sd_zip_sdf = GeoAccessor.from_geodataframe(\n",
-    "    sd_zip_codes, column_name = \"SHAPE\"\n",
-    ")\n",
-    "zip_code_fl = sd_zip_sdf.spatial.to_featurelayer(\n",
-    "    title = \"San Diego County Zip Codes\",\n",
-    "    gis = gis,\n",
-    "    tags = [\"San Diego\", \"Zip Codes\", \"County\"],\n",
-    "    overwrite = False,\n",
-    "    sanitize_columns = True,\n",
-    "    service_name = \"San_Diego_County_ZipCodes\"\n",
-    ")"
+    "# sd_zip_sdf = GeoAccessor.from_geodataframe(\n",
+    "#     sd_zip_codes, column_name = \"SHAPE\"\n",
+    "# )\n",
+    "# zip_code_fl = sd_zip_sdf.spatial.to_featurelayer(\n",
+    "#     title = \"San Diego County Zip Codes\",\n",
+    "#     gis = gis,\n",
+    "#     tags = [\"San Diego\", \"Zip Codes\", \"County\"],\n",
+    "#     overwrite = False,\n",
+    "#     sanitize_columns = True,\n",
+    "#     service_name = \"San_Diego_County_ZipCodes\"\n",
+    "# )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,13 +239,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9c259f264214c7a8b1d4e8a2c611355",
+       "model_id": "d1fa321ee9de4d01901e8d4365eae7dc",
        "version_major": 2,
        "version_minor": 1
       },
@@ -252,7 +253,7 @@
        "Map(center=[3857636.3466711883, -13042616.481232138], extent={'xmin': -13075789.689488532, 'ymin': 3818273.910…"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +322,9 @@
    "source": [
     "# 6) Expected Data Cleaning\n",
     "\n",
-    "Some relevant data quality issues is data age. We want to use more modern data, but also have data that is complete and accurate. We already did this with the collision data, as 2023 and 2024 data were incomplete, which means we had to settle for 2022. However, 2022 is a decent predictor of 2024 and 2025, as the bounceback from COVID had already begun. Fortunately, a topic like traffic accidents is a pretty popular and normal set that is used in data analysis, so there shouldn’t be any problems with it’s metadata. I would expect a lot of the data provided in SANDAG to be mostly reputable, but I do expect some problems with street names or areas that might not have been mapped out that well in the data. We will also encounter the issue of incomplete reporting, where the SANDAG data may not have full information reported for certain fields meaning we will have to impute some data or otherwise acount for the missing data."
+    "Some relevant data quality issues is data age. We want to use more modern data, but also have data that is complete and accurate. We already did this with the collision data, as 2023 and 2024 data were incomplete, which means we had to settle for 2022. However, 2022 is a decent predictor of 2024 and 2025, as the bounceback from COVID had already begun. Fortunately, a topic like traffic accidents is a pretty popular and normal set that is used in data analysis, so there shouldn’t be any problems with it’s metadata. I would expect a lot of the data provided in SANDAG to be mostly reputable, but I do expect some problems with street names or areas that might not have been mapped out that well in the data. We will also encounter the issue of incomplete reporting, where the SANDAG data may not have full information reported for certain fields meaning we will have to impute some data or otherwise acount for the missing data.\n",
+    "\n",
+    "Additionally, some data cleaning we had to do was due to the buffer, since the boundaries of the county weren't 100% accurate to the boundaries of the zip code. We had to place a 5000 meter buffer on the county in order to get all of the zip codes in the county."
    ]
   },
   {
@@ -334,6 +337,200 @@
     "* Data Analysis - We could look at concentrated places on our map where accidents occur more, and geoenrich a specific part (i.e. Downtown San Diego) to understand why something is happening. For instance, if we saw a lot of traffic in an area along with a lot of pedestrian violence, there might be a higher chance that an accident occurs. Similarly, we could also check restaurants that serve alcohol, and analyze whether or not areas near the restaurants could serve as an indication of an accident happening.\n",
     "* Machine Learning/Modeling - We want to model whether or not accidents are more likely to occur based on a number of variables that we had geoenriched. This could be the aforementioned # of restaurants that serve alcohol, or any sort of number of features that we geoenriched previously, and make sure we have a set of test areas that could be predicted. We could also predict the type of accident that happened spatially, with the same features. For our business case, we could identify certain zip codes or areas that contain a lot of traffic, and see reasons why they might be so traffic heavy compared to other zip codes. \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the first question, we observed whether or not collisions were more likely to occur in urban, rural, or suburban areas, as well as which zip codes had the highest collision density. We found per square kilometer, Rural Areas only had 0.001673 collisions, Suburban Areas had 0.003585 collisions, while Urban had by far the highest collision density, with 0.021066 collisions per square kilometer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's see if accidents are more prone to happening in urban, suburban, or rural areas\n",
+    "collision_gdf = gpd.GeoDataFrame(collision_sdf, geometry=collision_sdf.SHAPE)\n",
+    "sd_zip_codes_gdf = gpd.GeoDataFrame(sd_zip_codes_sdf, geometry=sd_zip_codes_sdf.SHAPE)\n",
+    "zip_code_collisions = collision_gdf.sjoin(sd_zip_codes_gdf, predicate=\"within\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# see which zip codes are most accident prone\n",
+    "collision_counts = zip_code_collisions.groupby(\"zip_code\").size().rename(\"Total Collisions\")\n",
+    "\n",
+    "# convert from m2 -> km2\n",
+    "total_area = zip_code_collisions.groupby(\"zip_code\")['shape_area'].sum().rename(\"Total Area\") / 1000000\n",
+    "collision_density = (collision_counts / total_area).rename(\"Collision Density\")\n",
+    "\n",
+    "zip_code_collision_density = sd_zip_codes_sdf.merge(collision_density, left_on = \"zip_code\", right_index = True, how = \"outer\")\n",
+    "zip_code_collision_density['Col_Dens_km'] = zip_code_collision_density['Collision Density'].fillna(0)\n",
+    "zip_code_collision_density = zip_code_collision_density.set_geometry(\"SHAPE\")\n",
+    "zip_code_collision_density = zip_code_collision_density.set_crs(\"3857\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_collision_density_sdf = GeoAccessor.from_geodataframe(\n",
+    "    zip_code_collision_density, column_name=\"SHAPE\"\n",
+    ")\n",
+    "zip_collision_density_fl = zip_collision_density_sdf.spatial.to_featurelayer(\n",
+    "    title=\"San Diego County Zip Code Collision Density\",\n",
+    "    gis=gis,\n",
+    "    tags=[\"San Diego\", \"Zip Codes\", \"Collision Density\"],\n",
+    "    overwrite=False,\n",
+    "    sanitize_columns=True,\n",
+    "    service_name=\"San_Diego_County_Zip_Code_Collision_Density\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_collision_layer = gis.content.search(query=\"owner:dsc170wi25_31\", item_type=\"Feature Layer\")[3]\n",
+    "zip_col_fl = gis.content.get(zip_collision_layer.id).layers[0]\n",
+    "zip_col_sdf = zip_col_fl.query().sdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7a21d9ea34d34fee96e2211803c20d6d",
+       "version_major": 2,
+       "version_minor": 1
+      },
+      "text/plain": [
+       "Map(center=[3857636.3466711883, -13042616.481232138], extent={'xmin': -13075789.689488532, 'ymin': 3818273.910…"
+      ]
+     },
+     "execution_count": 240,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map2 = gis.map(\"San Diego, CA\")\n",
+    "# Apply a graduated colors renderer\n",
+    "density_renderer = {\n",
+    "    \"type\": \"classBreaks\",\n",
+    "    \"field\": \"col_dens_k\",\n",
+    "    \"classificationMethod\": \"esriClassifyQuantile\",\n",
+    "    \"minValue\": 0,\n",
+    "    \"maxValue\": 1.3,\n",
+    "    \"defaultSymbol\": {\n",
+    "        \"type\": \"esriSFS\",\n",
+    "        \"style\": \"esriSFSSolid\",\n",
+    "        \"color\": [255, 255, 255, 100],\n",
+    "        \"outline\": {\n",
+    "            \"type\": \"esriSLS\",\n",
+    "            \"style\": \"esriSLSSolid\",\n",
+    "            \"color\": [110, 110, 110, 255],\n",
+    "            \"width\": 0.5,\n",
+    "        },\n",
+    "    },\n",
+    "    \"defaultLabel\": \"No Data\",\n",
+    "    \"legendOptions\": {\"title\": \"Collision Density (per sq km)\"},\n",
+    "    \"classBreakInfos\": [\n",
+    "        {\n",
+    "            \"classMaxValue\": np.percentile(zip_col_sdf[\"col_dens_k\"], 25),\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSFS\",\n",
+    "                \"style\": \"esriSFSSolid\",\n",
+    "                \"color\": [204, 236, 230, 100],  # Light blue-green\n",
+    "                \"outline\": {\n",
+    "                    \"color\": [110, 110, 110, 255],\n",
+    "                    \"width\": 0.5,\n",
+    "                    \"type\": \"esriSLS\",\n",
+    "                    \"style\": \"esriSLSSolid\",\n",
+    "                },\n",
+    "            },\n",
+    "            \"label\": \"1st-25th Percentile\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"classMaxValue\": np.percentile(zip_col_sdf[\"col_dens_k\"], 50),\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSFS\",\n",
+    "                \"style\": \"esriSFSSolid\",\n",
+    "                \"color\": [153, 216, 201, 100],  # Medium blue-green\n",
+    "                \"outline\": {\n",
+    "                    \"color\": [110, 110, 110, 255],\n",
+    "                    \"width\": 0.5,\n",
+    "                    \"type\": \"esriSLS\",\n",
+    "                    \"style\": \"esriSLSSolid\",\n",
+    "                },\n",
+    "            },\n",
+    "            \"label\": \"25th-50th Percentile\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"classMaxValue\": np.percentile(zip_col_sdf[\"col_dens_k\"], 75),\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSFS\",\n",
+    "                \"style\": \"esriSFSSolid\",\n",
+    "                \"color\": [102, 194, 164, 100],  # Darker blue-green\n",
+    "                \"outline\": {\n",
+    "                    \"color\": [110, 110, 110, 255],\n",
+    "                    \"width\": 0.5,\n",
+    "                    \"type\": \"esriSLS\",\n",
+    "                    \"style\": \"esriSLSSolid\",\n",
+    "                },\n",
+    "            },\n",
+    "            \"label\": \"50th-75th Percentile\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"classMaxValue\": np.percentile(zip_col_sdf[\"col_dens_k\"], 100),\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSFS\",\n",
+    "                \"style\": \"esriSFSSolid\",\n",
+    "                \"color\": [0, 109, 44, 255],  # Dark green\n",
+    "                \"outline\": {\n",
+    "                    \"color\": [110, 110, 110, 255],\n",
+    "                    \"width\": 0.5,\n",
+    "                    \"type\": \"esriSLS\",\n",
+    "                    \"style\": \"esriSLSSolid\",\n",
+    "                },\n",
+    "            },\n",
+    "            \"label\": \"75th-100th Percentile\",\n",
+    "        },\n",
+    "    ],\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# Add the layer with the heatmap renderer to your map\n",
+    "map2.content.add(zip_col_fl, drawing_info={\"renderer\": density_renderer})\n",
+    "map2.legend.enabled = True\n",
+    "map2\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
