added a demo section for today

--- a/project.ipynb
+++ b/project.ipynb
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,13 +780,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8256d5c8ebf7443f880b4a51487f6e6a",
+       "model_id": "6279794026f2414dae3e513503b0b4cd",
        "version_major": 2,
        "version_minor": 1
       },
@@ -794,7 +794,7 @@
        "Map(center=[3857636.3466711883, -13042616.481232138], extent={'xmin': -13075789.689488532, 'ymin': 3818273.910…"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +819,7 @@
     "                \"type\": \"esriSLS\",\n",
     "                \"style\": \"esriSLSSolid\",\n",
     "                \"color\": [0,0,255, 255], \n",
-    "                \"width\": 2  \n",
+    "                \"width\": 1.5  \n",
     "            }\n",
     "        },\n",
     "        {\n",
@@ -829,7 +829,7 @@
     "                \"type\": \"esriSLS\",\n",
     "                \"style\": \"esriSLSSolid\",\n",
     "                \"color\": [64,224,208, 255],\n",
-    "                \"width\": 3  \n",
+    "                \"width\": 2  \n",
     "            }\n",
     "        },\n",
     "        {\n",
@@ -839,7 +839,7 @@
     "                \"type\": \"esriSLS\",\n",
     "                \"style\": \"esriSLSSolid\",\n",
     "                \"color\": [0,255,127, 255], \n",
-    "                \"width\": 4  \n",
+    "                \"width\": 2.5  \n",
     "            }\n",
     "        },\n",
     "        {\n",
@@ -849,7 +849,7 @@
     "                \"type\": \"esriSLS\",\n",
     "                \"style\": \"esriSLSSolid\",\n",
     "                \"color\": [127,255,0, 255],\n",
-    "                \"width\": 5 \n",
+    "                \"width\": 3 \n",
     "            }\n",
     "        },\n",
     "        {\n",
@@ -859,7 +859,7 @@
     "                \"type\": \"esriSLS\",\n",
     "                \"style\": \"esriSLSSolid\",\n",
     "                \"color\": [255,255,0, 255], \n",
-    "                \"width\": 6  \n",
+    "                \"width\": 3.5  \n",
     "            }\n",
     "        },\n",
     "        {\n",
@@ -869,7 +869,7 @@
     "                \"type\": \"esriSLS\",\n",
     "                \"style\": \"esriSLSSolid\",\n",
     "                \"color\": [255,140,0, 255], \n",
-    "                \"width\": 7 \n",
+    "                \"width\": 4 \n",
     "            }\n",
     "        },\n",
     "        {\n",
@@ -879,7 +879,7 @@
     "                \"type\": \"esriSLS\",\n",
     "                \"style\": \"esriSLSSolid\",\n",
     "                \"color\": [220,20,60, 255],\n",
-    "                \"width\": 8  \n",
+    "                \"width\": 4.5  \n",
     "            }\n",
     "        }\n",
     "    ]\n",
@@ -3409,13 +3409,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "197a689be236446e85acfb7043708046",
+       "model_id": "7fc2a37bf4074e4583fe7e5480626a75",
        "version_major": 2,
        "version_minor": 1
       },
@@ -3423,7 +3423,7 @@
        "Map(center=[3857636.3466711883, -13042616.481232138], extent={'xmin': -13075789.689488532, 'ymin': 3818273.910…"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3517,37 +3517,16 @@
     "\n",
     "# Add the layer with the heatmap renderer to your map\n",
     "map7.content.add(speed_fl, drawing_info={\"renderer\": speed_median_renderer})\n",
+    "map7.content.add(road_fl, drawing_info={\"renderer\": road_renderer})\n",
     "map7.legend.enabled = True\n",
     "map7"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7415059b82074a0ca05ef562d89ad0a3",
-       "version_major": 2,
-       "version_minor": 1
-      },
-      "text/plain": [
-       "Map(center=[3857636.3466711883, -13042616.481232138], extent={'xmin': -13075789.689488532, 'ymin': 3818273.910…"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# map7 = gis.map(\"San Diego, CA\")\n",
-    "\n",
-    "# map7.content.add(speed_fl)\n",
-    "# map7.legend.enabled = True\n",
-    "# map7"
+    "In this graph we begin to draw comparisons between road speeds and the actual structures of the roads themselves.  Each space on the map represesnts a zip code, and the color represents the average speed on all the roads in the zip code.  We have then overlayed the road data from earlier, and we can begin seeing some trends.  In the speed data red is the fastest, around 60 mph average speed, wheras yellow is closer to 30 mph.  And the road data lighter colors represent more lanes, so those blue roads are 1 lane, wheras the green and cyan are 3 and 4 lane roads.  One would expect larger roads to lead to faster traffic, but actually analyzing the data shows trends of the larger roads actually having slower average speeds!  As we progress this project we will perform more analysis like this, attempting to locate more factors that determine average speed over an area, and of course seeing how those relate to crashes."
    ]
   },
   {
@@ -3558,6 +3537,271 @@
     "\n",
     "Some issues of the data could be that the San Diego county data might use NAD83 state plane EPSG:2230 while others might use EPSG:4326 which can be an easy fix. There might be temporal alignment issues however, as there could be time issues between years like 2020 or 2023. There might even be incomplete data from say, 2024. \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 9) Demonstration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "road_layer = gis.content.search(query=f\"owner:dsc170wi25_7 Road\", item_type=\"Feature Layer\")[0]\n",
+    "road_fl = gis.content.get(road_layer.id).layers[0]\n",
+    "road_sdf = road_fl.query().sdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0129568246844acdad8021b211a9ca1d",
+       "version_major": 2,
+       "version_minor": 1
+      },
+      "text/plain": [
+       "Map(center=[3857636.3466711883, -13042616.481232138], extent={'xmin': -13075789.689488532, 'ymin': 3818273.910…"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map3 = gis.map(\"San Diego, CA\")\n",
+    "\n",
+    "road_renderer = {\n",
+    "    \"type\": \"classBreaks\",\n",
+    "    \"field\": \"lanes\",  # Attribute that determines line width\n",
+    "    \"defaultSymbol\": {\n",
+    "        \"type\": \"esriSLS\",\n",
+    "        \"style\": \"esriSLSSolid\",\n",
+    "        \"color\": [128, 128, 128, 255],  # Gray color for undefined values\n",
+    "        \"width\": 1  # Default width\n",
+    "    },\n",
+    "    \"classBreakInfos\": [\n",
+    "        {\n",
+    "            \"classMinValue\": 1,\n",
+    "            \"classMaxValue\": 1,\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSLS\",\n",
+    "                \"style\": \"esriSLSSolid\",\n",
+    "                \"color\": [0,0,255, 255], \n",
+    "                \"width\": 1.5  \n",
+    "            }\n",
+    "        },\n",
+    "        {\n",
+    "            \"classMinValue\": 2,\n",
+    "            \"classMaxValue\": 2,\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSLS\",\n",
+    "                \"style\": \"esriSLSSolid\",\n",
+    "                \"color\": [64,224,208, 255],\n",
+    "                \"width\": 2  \n",
+    "            }\n",
+    "        },\n",
+    "        {\n",
+    "            \"classMinValue\": 3,\n",
+    "            \"classMaxValue\": 3,\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSLS\",\n",
+    "                \"style\": \"esriSLSSolid\",\n",
+    "                \"color\": [0,255,127, 255], \n",
+    "                \"width\": 2.5  \n",
+    "            }\n",
+    "        },\n",
+    "        {\n",
+    "            \"classMinValue\": 4,\n",
+    "            \"classMaxValue\": 4,\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSLS\",\n",
+    "                \"style\": \"esriSLSSolid\",\n",
+    "                \"color\": [127,255,0, 255],\n",
+    "                \"width\": 3 \n",
+    "            }\n",
+    "        },\n",
+    "        {\n",
+    "            \"classMinValue\": 5,\n",
+    "            \"classMaxValue\": 5,\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSLS\",\n",
+    "                \"style\": \"esriSLSSolid\",\n",
+    "                \"color\": [255,255,0, 255], \n",
+    "                \"width\": 3.5  \n",
+    "            }\n",
+    "        },\n",
+    "        {\n",
+    "            \"classMinValue\": 6,\n",
+    "            \"classMaxValue\": 6,\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSLS\",\n",
+    "                \"style\": \"esriSLSSolid\",\n",
+    "                \"color\": [255,140,0, 255], \n",
+    "                \"width\": 4 \n",
+    "            }\n",
+    "        },\n",
+    "        {\n",
+    "            \"classMinValue\": 7,\n",
+    "            \"classMaxValue\": 7,\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSLS\",\n",
+    "                \"style\": \"esriSLSSolid\",\n",
+    "                \"color\": [220,20,60, 255],\n",
+    "                \"width\": 4.5  \n",
+    "            }\n",
+    "        }\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "map3.content.add(road_fl, drawing_info={\"renderer\": road_renderer})\n",
+    "map3.legend.enabled = True\n",
+    "map3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "speed_layer = gis.content.search(\n",
+    "    query=f\"owner:dsc170wi25_7 Speed\", item_type=\"Feature Layer\"\n",
+    ")[0]\n",
+    "speed_fl = gis.content.get(speed_layer.id).layers[0]\n",
+    "speed_sdf = speed_fl.query().sdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f2870a5a68034dd3a23cdbb15927edd9",
+       "version_major": 2,
+       "version_minor": 1
+      },
+      "text/plain": [
+       "Map(center=[3857636.3466711883, -13042616.481232138], extent={'xmin': -13075789.689488532, 'ymin': 3818273.910…"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map7 = gis.map(\"San Diego, CA\")\n",
+    "# Apply a graduated colors renderer\n",
+    "speed_median_renderer = {\n",
+    "    \"type\": \"classBreaks\",\n",
+    "    \"field\": \"speed_2022\t\",\n",
+    "    \"classificationMethod\": \"esriClassifyQuantile\",\n",
+    "    \"minValue\": 0.0,\n",
+    "    \"maxValue\": 61.0,\n",
+    "    \"defaultSymbol\": {\n",
+    "        \"type\": \"esriSFS\",\n",
+    "        \"style\": \"esriSFSSolid\",\n",
+    "        \"color\": [255, 255, 255, 100],\n",
+    "        \"outline\": {\n",
+    "            \"type\": \"esriSLS\",\n",
+    "            \"style\": \"esriSLSSolid\",\n",
+    "            \"color\": [110, 110, 110, 255],\n",
+    "            \"width\": 0.5,\n",
+    "        },\n",
+    "    },\n",
+    "    \"defaultLabel\": \"No Data\",\n",
+    "    \"legendOptions\": {\"title\": \"Median Household Income of the Zip Code\"},\n",
+    "    \"classBreakInfos\": [\n",
+    "        {\n",
+    "            \"classMaxValue\": np.percentile(speed_sdf[\"speed_2022\"], 25),\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSFS\",\n",
+    "                \"style\": \"esriSFSSolid\",\n",
+    "                \"color\": [164, 255, 0, 180],  # Light blue-green with 70% opacity\n",
+    "                \"outline\": {\n",
+    "                    \"color\": [110, 110, 110, 255],\n",
+    "                    \"width\": 0.5,\n",
+    "                    \"type\": \"esriSLS\",\n",
+    "                    \"style\": \"esriSLSSolid\",\n",
+    "                },\n",
+    "            },\n",
+    "            \"label\": f\"$ - {np.round(np.percentile(speed_sdf['speed_2022'], 25), 2)}: 0th-25th Percentile\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"classMaxValue\": np.percentile(speed_sdf[\"speed_2022\"], 50),\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSFS\",\n",
+    "                \"style\": \"esriSFSSolid\",\n",
+    "                \"color\": [255, 244, 0, 180],  # Medium blue-green with 70% opacity\n",
+    "                \"outline\": {\n",
+    "                    \"color\": [110, 110, 110, 255],\n",
+    "                    \"width\": 0.5,\n",
+    "                    \"type\": \"esriSLS\",\n",
+    "                    \"style\": \"esriSLSSolid\",\n",
+    "                },\n",
+    "            },\n",
+    "            \"label\": f\"${np.round(np.percentile(speed_sdf['speed_2022'], 25), 2)} - {np.round(np.percentile(speed_sdf['speed_2022'], 50), 2)}: 25th-50th Percentile\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"classMaxValue\": np.percentile(speed_sdf[\"speed_2022\"], 75),\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSFS\",\n",
+    "                \"style\": \"esriSFSSolid\",\n",
+    "                \"color\": [255, 167, 0, 180],  # Darker blue-green with 70% opacity\n",
+    "                \"outline\": {\n",
+    "                    \"color\": [110, 110, 110, 255],\n",
+    "                    \"width\": 0.5,\n",
+    "                    \"type\": \"esriSLS\",\n",
+    "                    \"style\": \"esriSLSSolid\",\n",
+    "                },\n",
+    "            },\n",
+    "            \"label\": f\"${np.round(np.percentile(speed_sdf['speed_2022'], 50), 2)} - {np.round(np.percentile(speed_sdf['speed_2022'], 75), 2)}: 50th-75th Percentile\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"classMaxValue\": np.percentile(speed_sdf[\"speed_2022\"], 100),\n",
+    "            \"symbol\": {\n",
+    "                \"type\": \"esriSFS\",\n",
+    "                \"style\": \"esriSFSSolid\",\n",
+    "                \"color\": [255, 0, 0, 180],  # Dark green with 70% opacity\n",
+    "                \"outline\": {\n",
+    "                    \"color\": [110, 110, 110, 255],\n",
+    "                    \"width\": 0.5,\n",
+    "                    \"type\": \"esriSLS\",\n",
+    "                    \"style\": \"esriSLSSolid\",\n",
+    "                },\n",
+    "            },\n",
+    "            \"label\": f\"${np.round(np.percentile(speed_sdf['speed_2022'], 75), 2)}+: 75th-100th Percentile\",\n",
+    "        },\n",
+    "    ],\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# Add the layer with the heatmap renderer to your map\n",
+    "map7.content.add(speed_fl, drawing_info={\"renderer\": speed_median_renderer})\n",
+    "map7.content.add(road_fl, drawing_info={\"renderer\": road_renderer})\n",
+    "map7.legend.enabled = True\n",
+    "map7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
